--- a/index.html
+++ b/index.html
@@ -11,8 +11,16 @@
     <script src="js/script.js"></script>
 </head>
 <body>
-    <div>
-        <span>Text</span>
+    <div class="text-area d-flex flex-column">
+        <span>З Днем Народження вітаю,</span>
+        <span>І бажаю лиш добра,</span>
+        <span>Везіння у всіх справах,</span>
+        <span>І щасливого життя!</span>
+        <span>Доля хай прихильна буде,</span>
+        <span>Все задумaне – збулось,</span>
+        <span>В домі завжди радість буде,</span>
+        <span>І в любові там жилось!</span>
+        <span>Слава Україні!</span>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
